[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
rusty = []


[[bin]]
name = "33"
path = "src/33/src/main.rs"

[[bin]]
name = "81"
path = "src/81/src/main.rs"

[[bin]]
name = "1"
path = "src/1/src/main.rs"

[[bin]]
name = "2"
path = "src/2/src/main.rs"

[[bin]]
name = "3"
path = "src/3/src/main.rs"

[[bin]]
name = "9"
path = "src/9/src/main.rs"
