[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
rusty = []


[[bin]]
name = "33"
path = "src/33/src/main.rs"

[[bin]]
name = "81"
path = "src/81/src/main.rs"

[[bin]]
name = "1"
path = "src/1/src/main.rs"

[[bin]]
name = "2"
path = "src/2/src/main.rs"

[[bin]]
name = "3"
path = "src/3/src/main.rs"

[[bin]]
name = "9"
path = "src/9/src/main.rs"

[[bin]]
name = "13"
path = "src/13/src/main.rs"

[[bin]]
name = "14"
path = "src/14/src/main.rs"

[[bin]]
name = "20"
path = "src/20/src/main.rs"

[[bin]]
name = "21"
path = "src/21/src/main.rs"

[[bin]]
name = "22"
path = "src/22/src/main.rs"

[[bin]]
name = "17"
path = "src/17/src/main.rs"

[[bin]]
name = "649"
path = "src/649/src/main.rs"

[[bin]]
name = "1456"
path = "src/1456/src/main.rs"

[[bin]]
name = "1337"
path = "src/1337/src/main.rs"

[[bin]]
name = "287"
path = "src/287/src/main.rs"

[[bin]]
name = "38"
path = "src/38/src/main.rs"

[[bin]]
name = "1658"
path = "src/1658/src/main.rs"

[[bin]]
name = "4"
path = "src/4/src/main.rs"

[[bin]]
name = "392"
path = "src/392/src/main.rs"

[[bin]]
name = "1048"
path = "src/1048/src/main.rs"
