[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
rusty = []


[[bin]]
name = "33"
path = "src/33/src/main.rs"

[[bin]]
name = "81"
path = "src/81/src/main.rs"

[[bin]]
name = "1"
path = "src/1/src/main.rs"

[[bin]]
name = "2"
path = "src/2/src/main.rs"

[[bin]]
name = "3"
path = "src/3/src/main.rs"

[[bin]]
name = "9"
path = "src/9/src/main.rs"

[[bin]]
name = "13"
path = "src/13/src/main.rs"

[[bin]]
name = "14"
path = "src/14/src/main.rs"

[[bin]]
name = "20"
path = "src/20/src/main.rs"

[[bin]]
name = "21"
path = "src/21/src/main.rs"

[[bin]]
name = "22"
path = "src/22/src/main.rs"

[[bin]]
name = "17"
path = "src/17/src/main.rs"

[[bin]]
name = "649"
path = "src/649/src/main.rs"

[[bin]]
name = "1456"
path = "src/1456/src/main.rs"

[[bin]]
name = "1337"
path = "src/1337/src/main.rs"

[[bin]]
name = "287"
path = "src/287/src/main.rs"

[[bin]]
name = "38"
path = "src/38/src/main.rs"

[[bin]]
name = "1658"
path = "src/1658/src/main.rs"

[[bin]]
name = "4"
path = "src/4/src/main.rs"

[[bin]]
name = "392"
path = "src/392/src/main.rs"

[[bin]]
name = "1048"
path = "src/1048/src/main.rs"

[[bin]]
name = "389"
path = "src/389/src/main.rs"

[[bin]]
name = "316"
path = "src/316/src/main.rs"

[[bin]]
name = "880"
path = "src/880/src/main.rs"

[[bin]]
name = "905"
path = "src/905/src/main.rs"

[[bin]]
name = "896"
path = "src/896/src/main.rs"

[[bin]]
name = "456"
path = "src/456/src/main.rs"

[[bin]]
name = "557"
path = "src/557/src/main.rs"

[[bin]]
name = "2038"
path = "src/2038/src/main.rs"

[[bin]]
name = "1512"
path = "src/1512/src/main.rs"

[[bin]]
name = "706"
path = "src/706/src/main.rs"

[[bin]]
name = "169"
path = "src/169/src/main.rs"

[[bin]]
name = "229"
path = "src/229/src/main.rs"

[[bin]]
name = "343"
path = "src/343/src/main.rs"

[[bin]]
name = "34"
path = "src/34/src/main.rs"

[[bin]]
name = "2251"
path = "src/2251/src/main.rs"

[[bin]]
name = "746"
path = "src/746/src/main.rs"

[[bin]]
name = "119"
path = "src/119/src/main.rs"

[[bin]]
name = "1361"
path = "src/1361/src/main.rs"

[[bin]]
name = "2050"
path = "src/2050/src/main.rs"

[[bin]]
name = "844"
path = "src/844/src/main.rs"
